# tumeta

./: .gitignore  Cargo.toml  README.md
data/: cumulative-2023H3.toml  kde-survey-20231201.toml
localized/: Cargo.toml
localized/src/: lib.rs
schema/: topic-conventional.schema.json
topic_manifest/: Cargo.toml
topic_manifest/src/: conventional.rs  cumulative.rs  lib.rs
tumeta/: Cargo.toml
tumeta/src/: main.rs
